--- a/src/Radical.CQRS.EntityFramework.nuspec
+++ b/src/Radical.CQRS.EntityFramework.nuspec
@@ -2,19 +2,22 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>Radical.CQRS.EntityFramework</id>
-    <version>0.1.1-RC1</version>
+    <version>$version$</version>
     <authors>Mauro Servienti, Nazareno Manco</authors>
+    <owners>radical,mauroservienti</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Radical.CQRS is a small and simple toolkit to implement CQRS</description>
+    <projectUrl>https://github.com/RadicalFx/Radical.CQRS.EntityFramework</projectUrl>
+    <iconUrl>http://www.radicalframework.com/img/radical-ico.png</iconUrl>
     <tags>CQRS</tags>
     <dependencies>
-      <dependency id="Newtonsoft.Json" version="6.0.8" />
-      <dependency id="Radical" version="1.5.1.0" />
+      <dependency id="Newtonsoft.Json" version="8.0.2" />
+      <dependency id="Radical" version="1.5.3" />
       <dependency id="Radical.CQRS" version="0.1.1-RC1" />
       <dependency id="EntityFramework" version="6.1.3" />
     </dependencies>
   </metadata>
   <files>
-    <file src="artifacts\debug\Radical.CQRS.EntityFramework\lib\" target="lib\" />
+    <file src="artifacts\$configuration$\Radical.CQRS.EntityFramework\lib\" target="lib\" />
   </files>
 </package>
