--- a/src/Radical.CQRS.EntityFramework/packages.config
+++ b/src/Radical.CQRS.EntityFramework/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Radical" version="1.5.2.0" targetFramework="net45" />
-  <package id="Radical.CQRS" version="0.1.0" targetFramework="net45" />
+  <package id="GitVersionTask" version="3.4.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Radical" version="1.5.3" targetFramework="net45" />
+  <package id="Radical.CQRS" version="0.1.1-RC1" targetFramework="net45" />
 </packages>
