--- a/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
+++ b/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
@@ -47,8 +47,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Radical.CQRS, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Radical.CQRS.0.1.1-RC1\lib\net45\Radical.CQRS.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Radical.CQRS.0.2.0-unstable0027\lib\net45\Radical.CQRS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
