--- a/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
+++ b/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
@@ -46,9 +46,9 @@
       <HintPath>..\packages\Radical.1.5.3\lib\net45\Radical.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Radical.CQRS, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Radical.CQRS.0.2.0-unstable0027\lib\net45\Radical.CQRS.dll</HintPath>
+    <Reference Include="Radical.CQRS, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Radical.CQRS.0.2.0-unstable0028\lib\net45\Radical.CQRS.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
