--- a/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
+++ b/src/Radical.CQRS.EntityFramework/Radical.CQRS.EntityFramework.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DbMigrations\DropViewOperation.cs" />
     <Compile Include="DbMigrations\CreateViewOperation.cs" />
     <Compile Include="DbMigrations\CustomSqlServerMigrationSqlGenerator.cs" />
+    <Compile Include="DynamicLibrary.cs" />
     <Compile Include="EntityFrameworkDomainEventCommit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\SyncRepository.cs" />
